--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: posting, url:confirm_postings_path, local: true) do |form| %>
+<%= form_with(model: posting, url:choose_new_or_edit, local: true) do |form| %>
   <% if posting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(posting.errors.count, "error") %> prohibited this posting from being saved:</h2>
