--- a/app/views/postings/confirm.html.erb
+++ b/app/views/postings/confirm.html.erb
@@ -14,6 +14,8 @@
 <% end %>
 
 <%= form_with( model: @posting ,url: new_posting_path, local: true, method: "get" ) do |form| %>
+  <%= form.hidden_field :title %>
+  <%= form.hidden_field :content %>
   <%= form.hidden_field :image_cache %>
   <%= form.submit "戻る", name: "back" %>
 <% end %>
