ログイン状態でヘッダーの表示項目変更機能を修正

--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -10,10 +10,12 @@
   <%= @posting.content %>
 </p>
 
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @posting.image.url %>
-</p>
+ <% if @posting.image.present? %>
+  <p>
+    <strong>Image:</strong>
+    <%= image_tag @posting.image.url %>
+  </p>
+ <% end %>
 
-<%= link_to 'Edit', edit_posting_path(@posting) %> |
+<%= link_to 'Edit', edit_posting_path(@posting) %>
 <%= link_to 'Back', postings_path %>
