--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
     <% if logged_in? %>
       <%= link_to "マイページ", user_path(current_user.id) %>
-      <%= link_to "ログアウト", sessions_path(current_user.id), method: :delet %>
+      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
     <% else %>
       <%= link_to "新規アカウント作成", new_user_path %>
       <%= link_to "ログイン", new_session_path %>
