--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <% if logged_in? %>
       <%= link_to "マイページ", user_path(current_user.id) %>
       <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+      <%= link_to "投稿一覧ページ", postings_path %>
+      <p><%= current_user.name %>としてログインしています</p>
     <% else %>
       <%= link_to "新規アカウント作成", new_user_path %>
       <%= link_to "ログイン", new_session_path %>
