--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Image</th>
+      <th>タイトル</th>
+      <th>本文</th>
+      <th>画像</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= posting.title %></td>
         <td><%= posting.content %></td>
         <td><%= posting.image %></td>
-        <td><%= link_to 'Show', posting %></td>
-        <td><%= link_to 'Edit', edit_posting_path(posting) %></td>
-        <td><%= link_to 'Destroy', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細を確認する', posting %></td>
+        <td><%= link_to '編集する', edit_posting_path(posting) %></td>
+        <td><%= link_to '削除する', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
