--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -8,6 +8,7 @@
       <th>タイトル</th>
       <th>本文</th>
       <th>画像</th>
+      <th>投稿者</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= posting.title %></td>
         <td><%= posting.content %></td>
         <td><%= posting.image %></td>
+        <td><%= posting.user.name %></td>
         <td><%= link_to '詳細を確認する', posting %></td>
         <td><%= link_to '編集する', edit_posting_path(posting) %></td>
         <td><%= link_to '削除する', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
