--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -21,8 +21,10 @@
         <td><%= posting.image %></td>
         <td><%= posting.user.name %></td>
         <td><%= link_to '詳細を確認する', posting %></td>
-        <td><%= link_to '編集する', edit_posting_path(posting) %></td>
-        <td><%= link_to '削除する', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if posting.user.name == current_user.name %>
+          <td><%= link_to '編集する', edit_posting_path(posting) %></td>
+          <td><%= link_to '削除する', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
