--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -23,6 +23,8 @@
     <%= image_tag @posting.image.url %>
   </p>
  <% end %>
+<% if current_user.id == @posting.user.id %>
+  <%= link_to '編集する', edit_posting_path(@posting) %>
+<% end %>
 
-<%= link_to 'Edit', edit_posting_path(@posting) %>
-<%= link_to 'Back', postings_path %>
+<%= link_to '投稿一覧へ戻る', postings_path %>
