--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,53 @@
  *= require_tree .
  *= require_self
  */
+
+ header {
+  width: 100%;
+  background-color: #2c3e50;
+  height: 54px;
+}
+
+header ul {
+  margin: 0 auto;
+  list-style: none;
+}
+
+
+
+header ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: white;
+}
+
+header li {
+  float: left;
+  width: auto;
+  color: white;
+
+}
+
+
+.login_name{
+  color: black;
+  margin-right: 5px;
+}
+
+footer {
+  width: 100%;
+  background-color:#2c3e50;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  text-align: center;
+}
