全体の幅を調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,14 +43,14 @@
 
     <% if current_user.present? %>
       <div class="login_name">
-        <p><%= current_user.name %>としてログインしています</p>
+        <p><strong><%= current_user.name %></strong>としてログインしています</p>
       </div>
     <% end %>
 
     <%= yield %>
 
-    <footer class="text-center text-muted py-4">
-      Copyright XXX.com
+    <footer class="footer">
+        <p class="text-muted">Copyright XXX.com</p>
     </footer>
 
   </div>
