--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -6,8 +6,8 @@
 <div class="conteiner">
   <table class="table">
     <thead>
-      <tr>
-        <th class="col-md-2">タイトル</th>
+      <tr class="row">
+        <th class="col-md-3">タイトル</th>
         <th class="col-md-4">本文</th>
         <th class="col-md-5">画像</th>
         <th class="col-md-1">投稿者</th>
