--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,25 @@
  *= require_tree .
  *= require_self
  */
+html{
+  position: relative;
+  min-height: 100%;
+}
 
- header {
+body{
+  margin-bottom: 60px;
+}
+
+.container{
+  width: auto;
+}
+
+.text-muted{
+  margin: 20px 0;
+  text-align: center;
+}
+
+header {
   width: 100%;
   background-color: #2c3e50;
   height: 54px;
@@ -48,19 +65,10 @@ header li {
   margin-right: 5px;
 }
 
-footer {
-  width: 100%;
-  background-color:#2c3e50;
-  font-size: 12px;
+.footer {
   position: absolute;
   bottom: 0;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  text-align: center;
+  width: 100%;
+  height: 60px;
+  background-color: #2c3e50;
 }
