--- a/app/views/postings/new.html.erb
+++ b/app/views/postings/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Posting</h1>
+<h1>新規投稿</h1>
 
 <%= render 'form', posting: @posting %>
 
-<%= link_to 'Back', postings_path %>
+<%= link_to '戻る', postings_path %>
